// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @providesModule A
 * @flow
 */

require('B');

=====================================output=====================================
/**
 * @providesModule A
 * @flow
 */

require("B");

================================================================================
`;

exports[`B.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @providesModule B
 * @flow
 */
require('A');

=====================================output=====================================
/**
 * @providesModule B
 * @flow
 */
require("A");

================================================================================
`;
